--- a/style.css
+++ b/style.css
@@ -1,1 +1,474 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500&family=Source+Sans+Pro:ital,wght@1,300;1,400;1,600;1,700&display=swap');
 
+html {
+  font-size: 62.5%;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+::-webkit-scrollbar {
+  display: none;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+button,
+input,
+textarea {
+  all: unset;
+  cursor: pointer;
+}
+
+body {
+  height: 100vh;
+  background-image: url(./public/assets/marek-szturc-4CDdd1RCt6w-unsplash.jpg);
+  background-repeat: no-repeat;
+  background-size: fill;
+  font-family: 'Poppins', sans-serif;
+}
+
+/* Navigation Styles */
+nav {
+  color: #fff;
+  background: #222522ac;
+  width: 100%;
+  height: 12vh;
+  font-size: 1.6rem;
+  font-weight: 300;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  padding: 0 80px;
+}
+
+.current-location {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.current-location i {
+  margin-right: 10px;
+}
+
+.current-location span {
+  font-weight: 500;
+}
+
+.search-bar {
+  width: auto;
+  display: flex;
+  justify-content: space-between;
+}
+
+.search-bar button {
+  background: #333733;
+  width: 42px;
+  height: 42px;
+  border-radius: 50%;
+  margin-right: 12px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.search-input {
+  background: #333733;
+  font-size: 1.2rem;
+  border-radius: 18px;
+  padding: 12px 200px 12px 24px;
+}
+
+.metric {
+  width: auto;
+  display: flex;
+  justify-content: space-between;
+}
+
+.metric button {
+  background: #333733;
+  width: 34px;
+  height: 34px;
+  border-radius: 50%;
+  margin: 0 12px;
+  text-align: center;
+}
+
+/* Container Styles */
+.container {
+  color: #fff;
+  width: 100%;
+  height: 90vh;
+  display: flex;
+  padding: 0 80px;
+  margin: 50px 0;
+}
+
+.left-container {
+  width: 70%;
+  height: max-content;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  margin: 10px 0;
+  gap: 30px 60px;
+}
+
+.top {
+  height: 50%;
+  display: flex;
+  justify-content: space-between;
+  gap: 42px;
+}
+
+.current-weather {
+  background: rgba(101, 105, 109, 0.45);
+  backdrop-filter: blur(25px) saturate(180%);
+  width: 320px;
+  height: 290px;
+  border-radius: 16px;
+  padding: 30px 30px;
+}
+
+.date-time {
+  font-size: 1.6rem;
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 20px;
+}
+
+.weather {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
+.weather img {
+  width: 85px;
+}
+
+.weather span {
+  font-size: 4.2rem;
+  font-weight: 500;
+}
+
+#description {
+  font-size: 1.2rem;
+  font-weight: 300;
+}
+
+.border {
+  width: 100%;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.212);
+  padding-top: 12px;
+}
+
+.weather-info {
+  font-size: 1.2rem;
+  font-weight: 300;
+  letter-spacing: 0.07em;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 20px;
+}
+
+/* Pomodoro Timer Styles */
+.pomodoro-container {
+  background: rgba(74, 80, 85, 0.45);
+  backdrop-filter: blur(5px) saturate(180%);
+  width: 400px;
+  font-family: 'Poppins', sans-serif;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 30px;
+  border-radius: 16px;
+}
+
+.timer-modes {
+  height: 100%;
+  font-size: 1.5rem;
+  font-weight: 500;
+  letter-spacing: 0.04em;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+}
+
+.timer-modes button {
+  border-radius: 10px;
+  padding: 10px 12px;
+}
+
+.active {
+  color: #86a79f;
+}
+
+.timer-btns i {
+  font-size: 2.4rem;
+}
+
+.timer {
+  width: 65%;
+  height: 75%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 8px solid #86a79f76;
+  border-radius: 50%;
+  margin-right: 15px;
+}
+
+.circle {
+  /* background: #93c1b5; */
+  width: 80%;
+  height: 80%;
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 4px;
+  border-radius: 50%;
+}
+
+.time {
+  position: relative;
+}
+
+.time span {
+  font-size: 3.4rem;
+  font-weight: 300;
+}
+
+.hidden {
+  display: none;
+}
+
+.bottom {
+  height: 50%;
+  display: flex;
+  justify-content: space-between;
+  gap: 38px;
+}
+
+.details {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 7px;
+}
+
+.details div {
+  background: rgba(74, 80, 85, 0.45);
+  backdrop-filter: blur(5px) saturate(180%);
+  width: 150px;
+  height: 100%;
+  border-radius: 16px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  padding: 25px 30px;
+  margin-right: 10px;
+}
+
+.details h3 {
+  font-size: 1.3rem;
+  letter-spacing: 0.06em;
+}
+
+.details i {
+  font-size: 1.4rem;
+}
+
+#feels-temp,
+#wind,
+#humidity {
+  font-size: 1.8rem;
+}
+
+.metrics {
+  color: rgba(255, 255, 255, 0.212);
+  font-size: 1rem;
+  font-weight: 300;
+  margin-left: 4px;
+}
+
+.wind-container img {
+  width: 20%;
+}
+
+.details span {
+  font-size: 1.2rem;
+}
+
+.quotes-container {
+  color: rgba(255, 255, 255, 0.746);
+  background: rgba(74, 80, 85, 0.45);
+  backdrop-filter: blur(5px) saturate(180%);
+  font-family: 'Source Sans Pro', sans-serif;
+  max-width: max-content;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: flex-end;
+  border-radius: 16px;
+  padding: 50px 30px;
+}
+
+.quote {
+  font-size: 1.8rem;
+  font-weight: 300;
+  margin-bottom: 10px;
+}
+
+.quote-author {
+  font-size: 1.6rem;
+  font-weight: 700;
+}
+
+.right-container {
+  width: 70%;
+  padding-right: 50px;
+  margin: 10px 0;
+}
+
+.to-do-container {
+  background: rgba(74, 80, 85, 0.45);
+  backdrop-filter: blur(5px) saturate(180%);
+  width: 100%;
+  height: fit-content;
+  border-radius: 16px;
+  padding: 30px 30px;
+  margin-left: 40px;
+}
+
+.to-do-form {
+  background: #5a6864;
+  display: grid;
+  grid-template-columns: 12% 88%;
+  border-radius: 4px;
+}
+
+.checkbox-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+}
+
+.checkbox {
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  border: 0.02px solid rgba(255, 255, 255, 0.422);
+  outline: none;
+  color: white;
+  cursor: pointer;
+}
+
+.to-do-input {
+  font-size: 1.2rem;
+  width: 80%;
+  padding: 12px 0;
+  margin-right: 0 50px;
+}
+
+.to-do-input::placeholder {
+  color: rgba(255, 255, 255, 0.638);
+}
+
+#to-do-list {
+  margin-top: 12px;
+}
+
+.to-do-item {
+  background: #5a6864;
+  list-style: none;
+  display: grid;
+  grid-template-columns: 12% 88%;
+  align-items: center;
+  border-radius: 4px;
+  font-size: 1.2rem;
+  padding: 10px 5px 10px 0;
+  margin-bottom: 10px;
+}
+
+.button-container {
+  display: flex;
+  flex-direction: column;
+  margin-top: 25px;
+  gap: 10px;
+}
+
+#message {
+  color: rgb(244, 59, 59);
+}
+
+.display-buttons {
+  display: flex;
+  justify-content: space-between;
+}
+
+#items-left {
+  color: rgba(255, 255, 255, 0.608);
+}
+
+/* Media Queries Styles */
+@media all and (max-width: 1342px) {
+  .container {
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+    padding: 0;
+  }
+
+  .left-container {
+    gap: 60px;
+  }
+
+  .pomodoro-container {
+    height: 300px;
+  }
+
+  .to-do-container {
+    margin: 0;
+  }
+
+  .right-container {
+    padding: 0;
+  }
+}
+
+@media all and (max-width: 930px) {
+  .left-container,
+  .right-container {
+    width: 80%;
+  }
+}
+
+@media all and (max-width: 820px) {
+  .top {
+    height: 100%;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .pomodoro-container {
+    height: 300px;
+  }
+
+  .bottom {
+    flex-direction: column;
+    align-items: center;
+  }
+}
